respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Shipment_Line__c.object
<CustomObject>
    <fields>
        <fullName>Supplier_Total_Weight_kg__c</fullName>
        <formula>IF(Quote_Item_Line__r.Supplier_Total_Weight_kg__c &gt; 0 , Quote_Item_Line__r.Supplier_Total_Weight_kg__c, IF( Supplier_Quote_Line__r.Supplier_Total_Weight_kg__c &gt; 0,Supplier_Quote_Line__r.Supplier_Total_Weight_kg__c,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Peso Bruto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TEUS__c</fullName>
        <label>TEUS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Temperatura__c</fullName>
        <description>Campo para indicar la temperatura del producto</description>
        <label>Temperatura</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Allocated_On_Disbursements__c</fullName>
        <label>Total Amount Allocated On Disbursements</label>
        <summarizedField>Shipment_Item_Line_Disbursement__c.Amount_Allocated_Cargo_Line_Currency__c</summarizedField>
        <summaryForeignKey>Shipment_Item_Line_Disbursement__c.Shipment_Item_Line__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Disbursements_Hea_Currency__c</fullName>
        <formula>Total_Amount_Allocated_On_Disbursements__c *  Conversion_Rate_to_Currency_Header__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount Disbursements(Hea Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Invoiced__c</fullName>
        <label>Total Amount Invoiced</label>
        <summarizedField>Invoice_Item_Line__c.Amount_Allocated_Cargo_Line_Currency__c</summarizedField>
        <summaryForeignKey>Invoice_Item_Line__c.Shipment_Item_Line__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Invoiced_header_currency__c</fullName>
        <formula>Total_Amount_Invoiced__c *  Conversion_Rate_to_Currency_Header__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount Invoiced (header currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Taxes__c</fullName>
        <description>Sum of &quot;Duty&quot;, &quot;Sales Tax&quot; and &quot;Additional Import Taxes Amount&quot;</description>
        <formula>Duty__c +  Sales_Tax__c +  Additional_Import_Taxes_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of &quot;Duty&quot;, &quot;Sales Tax&quot; and &quot;Additional Import Taxes Amount&quot;</inlineHelpText>
        <label>Total Taxes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Taxes_header_currency__c</fullName>
        <formula>Total_Taxes__c *  Conversion_Rate_to_Currency_Header__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Taxes (header currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Volume_Items_Packaging_m3__c</fullName>
        <description>Product of &quot;Units Shipped&quot; and ratio of &quot;Master Box Volume (m3)&quot; from &quot;Item Name&quot; to &quot;Units x Master Box&quot; from &quot;Item Name&quot;</description>
        <formula>(Item_Name__r.Master_Box_Volume_m3__c / Item_Name__r.Units_x_Master_Box__c)* Units_Shipped__c</formula>
        <label>Total Volume Items + Packaging (m3)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Weight_Items_Packaging_Kg__c</fullName>
        <description>Product of &quot;Units Shipped&quot; and; ratio of &quot;Master Box Weight (Kg)&quot; from &quot;Item Name&quot; to &quot;Units x Master Box&quot; from &quot;Item Name&quot;, or &quot;Weight (Kgs)&quot; from &quot;Item Name&quot;</description>
        <formula>Units_Shipped__c *  BLANKVALUE( Item_Name__r.Master_Box_Gross_Weight_kg__c /  Item_Name__r.Units_x_Master_Box__c , Item_Name__r.Weight_Kgs__c )</formula>
        <label>Total Weight Items + Packaging (Kg)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Destination_Price__c</fullName>
        <formula>Destination_Amount__c /  Units_Shipped__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Destination Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Origin_Buy_Price__c</fullName>
        <label>Unit Origin Buy Price</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Origin_Sell_Price__c</fullName>
        <label>Unit Origin Price</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Origin_Sell_Price_header_currency__c</fullName>
        <formula>Unit_Origin_Sell_Price__c * Conversion_Rate_to_Currency_Header__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Origin Sell Price (header currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_of_measure__c</fullName>
        <formula>TEXT( Item_Name__r.Unit_of_measure__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit of measure</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Units_Customer_Order__c</fullName>
        <formula>Customer_Order_Line__r.Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Units Field Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Units_Quoted__c</fullName>
        <formula>Quote_Item_Line__r.Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Units Quoted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Units_Shipped__c</fullName>
        <label>Units Shipped</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Units_Supplier_Quote_Order__c</fullName>
        <formula>Supplier_Quote_Line__r.Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Units Supplier Quote/Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warehouse_Location__c</fullName>
        <label>Warehouse Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Warehouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Warehouse</label>
        <referenceTo>Warehouse__c</referenceTo>
        <relationshipName>Shipment_Items_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pallet_warehouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pallet Warehouse</label>
        <referenceTo>pallet_warehouse__c</referenceTo>
        <relationshipLabel>Shipment Cargo Lines</relationshipLabel>
        <relationshipName>Shipment_Cargo_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Shipment Cargo Line</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Shipment Cargo Line</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipment Cargo Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>